--- a/css/styles.css
+++ b/css/styles.css
@@ -230,12 +230,16 @@ body {
 
 .benefits-list .item{
    flex-basis: calc(100% / 4 - 30px);
+   /* margin-left: 30px; */
+}
+
+.benefits-list .item:not(:first-child){
    margin-left: 30px;
 }
 
-.benefits-list .item:first-child{
+/* .benefits-list .item:first-child{
    margin-left: 0px;
-}
+} */
 
 /* .benefits-list .item{
    flex-basis: 270px;
